Updates to results page

--- a/app/views/layinghens/current/scoring/current-system.html
+++ b/app/views/layinghens/current/scoring/current-system.html
@@ -70,8 +70,8 @@
                         },
                         {
                             text: 'None of the above',
-                            value: 'None of the above',
-                            checked: true if data['scoring-system'] == 'None of the above'
+                            value: 'Other housing system',
+                            checked: true if data['scoring-system'] == 'Other housing system'
                         }
                     ]
                 }) }}
