--- a/app/views/layinghens/current/scoring/environment-data.html
+++ b/app/views/layinghens/current/scoring/environment-data.html
@@ -34,8 +34,8 @@
                     items: [
                         {
                             text: 'Yes',
-                            value: 'Yes',
-                            checked: true if data['scoring-environment-data'] == 'Yes',
+                            value: 'Yes, environmental data will be monitored',
+                            checked: true if data['scoring-environment-data'] == 'Yes, environmental data will be monitored',
                             attributes: {
                                 'data-next': 'environment-data-collection'
                             }
