--- a/app/views/layinghens/current/scoring/grip.html
+++ b/app/views/layinghens/current/scoring/grip.html
@@ -38,13 +38,13 @@
                     items: [
                         {
                             text: 'Yes',
-                            value: 'Yes, there will be easy grip perches',
-                            checked: true if data['scoring-grip'] == 'Yes, there will be easy grip perches'
+                            value: 'Yes, there will be easy-grip perches',
+                            checked: true if data['scoring-grip'] == 'Yes, there will be easy-grip perches'
                         },
                         {
                             text: 'No',
-                            value: 'No, there will not be easy grip perches',
-                            checked: true if data['scoring-grip'] == 'No, there will not be easy grip perches'
+                            value: 'No, there will not be easy-grip perches',
+                            checked: true if data['scoring-grip'] == 'No, there will not be easy-grip perches'
                         }
                     ]
                 }) }}
