--- a/app/views/layinghens/current/scoring/results.html
+++ b/app/views/layinghens/current/scoring/results.html
@@ -239,7 +239,7 @@
                      <tr class="govuk-table__row">
                         <td class="govuk-table__cell">
                             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">
-                                Easy grip perches
+                                Easy-grip perches
                             </p>
                             <ul class="govuk-list govuk-list--bullet">
                                 <li>
@@ -363,7 +363,7 @@
                             Average
                         </td>
                         <td class="govuk-table__cell">
-                            Use of polution mitigation practices
+                            Use of renewable energy
                         </td>
                         <td class="govuk-table__cell">
                             <a class="govuk-link govuk-link--no-visited-state" href="energy?from-scoring=true">
