--- a/app/views/layinghens/current/scoring/dark-brooders.html
+++ b/app/views/layinghens/current/scoring/dark-brooders.html
@@ -44,7 +44,7 @@
                         {
                             text: 'No',
                             value: 'No, the housing will not have dark brooders',
-                            checked: true if data['scoring-dark-brooders'] == 'No'
+                            checked: true if data['scoring-dark-brooders'] == 'No, the housing will not have dark brooders'
                         }
                     ]
                 }) }}
