--- a/app/views/layinghens/current/scoring/energy.html
+++ b/app/views/layinghens/current/scoring/energy.html
@@ -62,10 +62,7 @@
                         {
                             text: 'None of the above',
                             value: 'No renewable energy use',
-                            checked: true if 'No renewable energy use' | isIn(data['scoring-energy']),
-                            attributes: {
-                                'data-behaviour': 'exclusive'
-                            }
+                            checked: true if 'No renewable energy use' | isIn(data['scoring-energy'])
                         }
                     ]
                 }) }}
