Added next steps section to results page

--- a/app/views/layinghens/current/scoring/results.html
+++ b/app/views/layinghens/current/scoring/results.html
@@ -470,6 +470,31 @@
 
         </div>
 
+    </div>
+
+    <div class="govuk-grid-row">
+
+        <div class="govuk-grid-column-two-thirds">
+            
+            <h2 class="govuk-heading-l">
+                Next steps
+            </h2>
+
+            <p>
+                Next, add your business and contact details and submit them to the RPA (you should only do this once).
+            </p>
+
+            <p>
+                You’ll get an email with your score and answers, and a reference number.
+            </p>
+
+            {{ govukButton ({
+                text: 'Continue',
+                href: '../business-details'
+            }) }}
+
+        </div>
+
 </div>
 
 {% endblock %}
