Fixes to content

--- a/app/views/layinghens/current/scoring/height.html
+++ b/app/views/layinghens/current/scoring/height.html
@@ -35,13 +35,13 @@
                     items: [
                         {
                             text: 'Yes',
-                            value: 'Yes, the height is equal or less than 2 metres',
-                            checked: true if data['scoring-height'] == 'Yes, the height is equal or less than 2 metres'
+                            value: 'Yes, the highest tier will be 2 metres high or less',
+                            checked: true if data['scoring-height'] == 'Yes, the highest tier will be 2 metres high or less'
                         },
                         {
                             text: 'No',
-                            value: 'No, the highest tier is more than 2 metres high',
-                            checked: true if data['scoring-height'] == 'No, the highest tier is more than 2 metres high'
+                            value: 'No, the highest tier will be more than 2 metres high',
+                            checked: true if data['scoring-height'] == 'No, the highest tier will be more than 2 metres high'
                         }
                     ]
                 }) }}
