--- a/app/views/layinghens/current/scoring/results.html
+++ b/app/views/layinghens/current/scoring/results.html
@@ -167,7 +167,7 @@
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell">
                             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">
-                                Maximum heigh of highest tier
+                                Maximum height of highest tier
                             </p>
                             <ul class="govuk-list govuk-list--bullet">
                                 <li>
