Updates to content

--- a/app/views/layinghens/current/eligibility/aviary/welfare.html
+++ b/app/views/layinghens/current/eligibility/aviary/welfare.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the aviary system meet the manufacture's recommendation for high welfare?
+    Will the aviary system meet the manufacturer's recommendation for high welfare?
 {% endblock %}
 
 {% block content %}
@@ -23,7 +23,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the aviary system meet the manufacture’s recommendation for high welfare?',
+                            text: 'Will the aviary system meet the manufacturer’s recommendation for high welfare?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
