--- a/app/views/layinghens/current/eligibility/solar/solar-pv-system.html
+++ b/app/views/layinghens/current/eligibility/solar/solar-pv-system.html
@@ -15,7 +15,7 @@
                  {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        You can choose to buy and install a solar PV system on the grant-funded calf housing as part of this grant.
+                        You can choose to buy and install a solar PV system on the grant-funded housing as part of this grant.
                     </p>
 
                     <p class="govuk-hint"> 
