--- a/app/views/layinghens/current/eligibility/common/project-start.html
+++ b/app/views/layinghens/current/eligibility/common/project-start.html
@@ -13,8 +13,8 @@
             <form method="post">
 
                 {{ govukRadios ({
-                    idPrefix: 'tenancy',
-                    name: 'tenancy',
+                    idPrefix: 'project-start',
+                    name: 'project-start',
                     fieldset: {
                         legend: {
                             text: 'Have you already started work on the project?',
