--- a/app/views/layinghens/current/eligibility/veranda/pop-holes.html
+++ b/app/views/layinghens/current/eligibility/veranda/pop-holes.html
@@ -19,7 +19,7 @@
 
                 {% set nextPage = '../features/concrete-apron' %}
                 {% if data['project-type'] == 'veranda' %}
-                    {% set nextPage = '../../business-details' %}
+                    {% set nextPage = 'project-cost-total' %}
                 {% endif %}
 
                 {{ govukRadios ({
