--- a/app/views/layinghens/index.html
+++ b/app/views/layinghens/index.html
@@ -20,9 +20,13 @@
         <h2 class="govuk-heading-l">User research</h2>
          
         <p class='govuk-list app-list--definition'>
-            <a href='/layinghens/current/start' class="govuk-link--no-visited-state">Start page</a><br>
-            Specialist start page, hosted on GOV.UK</p>
+            <a href='/layinghens/current/start-page?waitlist-enabled=false' class="govuk-link--no-visited-state">Start page</a><br>
+            Before waitlist is open</p>
 
+            <p class='govuk-list app-list--definition'>
+            <a href='/layinghens/current/start-page?waitlist-enabled=true' class="govuk-link--no-visited-state">Start page</a><br>
+            After waitlist is open</p>
+            
       </div>
 
       <div class="proto-admin">
