--- a/app/views/layinghens/user-testing/likert-scale.html
+++ b/app/views/layinghens/user-testing/likert-scale.html
@@ -192,8 +192,14 @@
 
             <ul class="govuk-list">
                 <li>
-                    <a href="/layinghens/current/start">
+                    <a href="/layinghens/current/start-page?waitlist-enabled=false">
                         Start page
+                    </a>
+                </li>
+
+                <li>
+                    <a href="/layinghens/current/start-page?waitlist-enabled=true">
+                        Start page (waitlist enabled)
                     </a>
                 </li>
 
