--- a/app/views/layinghens/current/eligibility/veranda/features.html
+++ b/app/views/layinghens/current/eligibility/veranda/features.html
@@ -28,7 +28,7 @@
                         }
                     },
                     hint: {
-                        text: 'Housing projects that do not have access to an area at least 30% the size of the indoor housing area are exempt from adding a veranda'
+                        text: 'Housing projects that do not have access to an area at least 30% of the size of the indoor housing area are exempt from adding a veranda'
                     },
                     items: [
                         {
@@ -76,7 +76,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    You must add a veranda that is at least the same size as 30% the indoor bird housing area footprint.
+                    You must add a veranda that is at least the same size as 30% of the indoor bird housing area footprint.
                 </p>
                 <p>
                     Housing projects that do not have access to an external area at least 30% of the indoor housing area are exempt.
