updates to journey

--- a/app/views/layinghens/current/scoring/tiers.html
+++ b/app/views/layinghens/current/scoring/tiers.html
@@ -18,7 +18,7 @@
             {% if data['from-scoring'] == 'true' %}
                 <form action="results">
             {% else %}
-                <form action="natural-light">
+                <form action="multi-tier-other">
             {% endif %}
 
                 {{ govukRadios ({
