--- a/app/views/layinghens/current/business-details.html
+++ b/app/views/layinghens/current/business-details.html
@@ -69,15 +69,25 @@
             }) }}
 
             {{ govukInput ({
-                id: 'sbi-hint',
-                name: 'sbi-hint',
+                id: 'sbi',
+                name: 'sbi',
                 classes: 'govuk-input--width-20',
-                value: data['sbi-hint'] if data['sbi-hint'] else '',
+                value: data['sbi'] if data['sbi'] else '',
                 hint: {
                     text: 'If you do not have an SBI, you will need to get one for full application'
                 },
                 label: {
-                    text: 'Single Business Identifier (SBI)'
+                    text: 'Single Business Identifier (SBI) (optional)'
+                }
+            }) }}
+
+            {{ govukInput ({
+                id: 'cph',
+                name: 'cph',
+                classes: 'govuk-input--width-20',
+                value: data['cph'] if data['cph'] else '',
+                label: {
+                    text: 'County parish holding (CPH) number'
                 }
             }) }}
 
