--- a/app/views/layinghens/current/consent.html
+++ b/app/views/layinghens/current/consent.html
@@ -30,6 +30,13 @@
         <p>I am aware that the information I submit will be checked by the RPA.</p>
         <p>I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application.</p>
 
+        {% if data['waitlist-enabled'] == 'true' and data['project-type'] == 'veranda' %}
+          {{ govukInsetText ({
+            text: 'I understand that the RPA will award the grant funding for adding a veranda only to existing housing on a first-come-first-served basis'
+          }) }}
+        {% endif %}
+
+
         <h3 class="govuk-heading-s">Improving our schemes</h3>
 
         <p class="govuk-body govuk-!-margin-bottom-2">So that we can continue to improve our services and schemes, we may wish to contact you in the future.
