updates based on changelog

--- a/app/views/layinghens/current/eligibility/common/elim-farmer-type.html
+++ b/app/views/layinghens/current/eligibility/common/elim-farmer-type.html
@@ -15,7 +15,7 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    You're not eligible.
+                    This grant is for laying hen or pullet farmers.
                 </p>
 
                 <p>
