--- a/app/views/layinghens/current/scoring/current-system.html
+++ b/app/views/layinghens/current/scoring/current-system.html
@@ -91,7 +91,7 @@
                 <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    RPA want to prioritise supporting farmers that are transitioning out of using cages, or to high-welfare multi-tier aviary systems.
+                    RPA want to prioritise supporting farmers that are transitioning out of using colony cages, or to high-welfare multi-tier aviary systems.
                 </p>
             </div>
 
