--- a/app/views/layinghens/current/scoring/data.html
+++ b/app/views/layinghens/current/scoring/data.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the {{ poultryType }} housing have systems to monitor bird data for poultry management?
+    What poultry management data will you monitor?
 {% endblock %}
 
 {% block content %}
@@ -15,40 +15,80 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            {% set nextPageOnNo = 'environment-data' %}
-
             {% if data['from-scoring'] == 'true' %}
-                {% set nextPageOnNo = 'results' %}
+                <form action="results">
+            {% else %}
+                <form action="environment-data">
             {% endif %}
 
-            <form method="post">
-
-                {{ govukRadios ({
+                {{ govukCheckboxes ({
                     idPrefix: 'scoring-data',
                     name: 'scoring-data',
-                    classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the ' + poultryType + ' housing have systems to monitor bird data for poultry management?',
+                            text: 'What poultry management data will you monitor?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
+                    hint: {
+                        text: 'Select all that apply'
+                    },
                     items: [
                         {
-                            text: 'Yes',
-                            value: 'Yes, bird data will be monitored',
-                            checked: true if data['scoring-data'] == 'Yes, bird data will be monitored',
-                            attributes: {
-                                'data-next': 'data-collection'
-                            }
+                            text: 'Bird performance data',
+                            value: 'Bird performance data',
+                            checked: true if 'Bird performance data' | isIn(data['scoring-data'])
                         },
                         {
-                            text: 'No',
-                            value: 'No, bird data will not be monitored',
-                            checked: true if data['scoring-data'] == 'No, bird data will not be monitored',
+                            text: 'Body weight',
+                            value: 'Body weight',
+                            checked: true if 'Body weight' | isIn(data['scoring-data'])
+                        },
+                        {
+                            text: 'Disease detection',
+                            value: 'Disease detection',
+                            checked: true if 'Disease detection' | isIn(data['scoring-data'])
+                        },
+                        {
+                            text: 'Feed data or conversion ratios',
+                            value: 'Feed data or conversion ratios',
+                            checked: true if 'Feed data or conversion ratios' | isIn(data['scoring-data'])
+                        },
+                        {
+                            text: 'Location or locomotion',
+                            value: 'Location or locomotion',
+                            checked: true if 'Location or locomotion' | isIn(data['scoring-data'])
+                        },
+                        {
+                            text: 'Movement data',
+                            value: 'Movement data',
+                            checked: true if 'Movement data' | isIn(data['scoring-data'])
+                        },
+                        {
+                            text: 'Nest use',
+                            value: 'Nest use',
+                            checked: true if 'Nest use' | isIn(data['scoring-data'])
+                        },
+                        {
+                            text: 'Sound analysis',
+                            value: 'Sound analysis',
+                            checked: true if 'Sound analysis' | isIn(data['scoring-data'])
+                        },
+                        {
+                            text: 'Other',
+                            value: 'Other',
+                            checked: true if 'Other' | isIn(data['scoring-data'])
+                        },
+                        {
+                            divider: 'or'
+                        },
+                        {
+                            text: 'I will not monitor any poultry management data',
+                            value: 'I will not monitor bird data for poultry management',
+                            checked: true if 'I will not monitor bird data for poultry management' | isIn(data['scoring-data']),
                             attributes: {
-                                'data-next': nextPageOnNo
+                                'data-behaviour': 'exclusive'
                             }
                         }
                     ]
@@ -69,7 +109,7 @@
                 <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    RPA want to fund projects that gather poultry data.
+                    RPA want to fund projects that have systems to monitor data for poultry management.
                 </p>
             </div>
 
