--- a/app/views/layinghens/current/scoring/energy.html
+++ b/app/views/layinghens/current/scoring/energy.html
@@ -21,10 +21,37 @@
                 <form action="data">
             {% endif %}
 
+                {% set heatExhangerOptionsHtml %}
+
+                    {{ govukRadios ({
+                        idPrefix: 'scoring-energy-heat-exchanger',
+                        name: 'scoring-energy-heat-exchanger',
+                        fieldset: {
+                            legend: {
+                                text: 'Which type of heat exchanger will you have?',
+                                isPageHeading: false,
+                                classes: 'govuk-fieldset__legend--s'
+                            }
+                        },
+                        items: [
+                            {
+                                text: 'Heating only',
+                                value: 'Heating only',
+                                checked: true if data['scoring-energy-heat-exchanger'] == 'Heating only'
+                            },
+                            {
+                                text: 'Heating and cooling',
+                                value: 'Heating and cooling',
+                                checked: true if data['scoring-energy-heat-exchanger'] == 'Heating and cooling'
+                            }
+                        ]
+                    }) }}
+
+                {% endset %}
+
                 {{ govukCheckboxes ({
                     idPrefix: 'scoring-energy',
                     name: 'scoring-energy',
-                    classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
                             text: 'Will the ' + poultryType + ' housing use renewable energy sources?',
@@ -42,14 +69,12 @@
                             checked: true if 'Solar or thermal PV system' | isIn(data['scoring-energy'])
                         },
                         {
-                            text: 'A heat exchanger (heating only)',
-                            value: 'A heat exchanger (heating only)',
-                            checked: true if 'A heat exchanger (heating only)' | isIn(data['scoring-energy'])
-                        },
-                        {
-                            text: 'A heat exchanger with a cooling function',
-                            value: 'A heat exchanger with a cooling function',
-                            checked: true if 'A heat exchanger with a cooling function' | isIn(data['scoring-energy'])
+                            text: 'A heat exchanger',
+                            value: 'A heat exchanger',
+                            checked: true if 'A heat exchanger' | isIn(data['scoring-energy']),
+                            conditional: {
+                                html: heatExhangerOptionsHtml
+                            }
                         },
                         {
                             text: 'Biomass boiler',
