--- a/app/views/layinghens/current/consent.html
+++ b/app/views/layinghens/current/consent.html
@@ -28,7 +28,7 @@
         <p>I confirm that, to the best of my knowledge, the details I have provided are correct.</p>
         <p>I understand the project’s eligibility and estimated grant amount is based on the answers I provided.</p>
         <p>I am aware that the information I submit will be checked by the RPA.</p>
-        <p>I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application.</p>
+        <p>I am happy to be contacted by DEFRA and RPA (or a third-party on their behalf) about registering my interest to apply for grant funding for a veranda project.</p>
 
         {% if data['waitlist-enabled'] == 'true' and data['project-type'] == 'veranda' %}
           {{ govukInsetText ({
