change log changes

--- a/app/views/layinghens/current/eligibility/features/number-of-birds.html
+++ b/app/views/layinghens/current/eligibility/features/number-of-birds.html
@@ -15,7 +15,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form action="../solar/roof-support-for-solar-pv.html">
+            <form action="elim-number-of-birds">
 
                 <h1 class="govuk-heading-l">
                     How many {{ poultryType }}s will there be in the house?
@@ -42,6 +42,16 @@
 
             </form>
 
+        </div>
+
+        <div class="govuk-grid-column-one-third">
+
+            <div class="app-step-nav-related app-step-nav-related--singular">
+                <h2 class="app-step-nav-related__heading">
+                <span class="app-step-nav-related__pretitle">Eligibility</span>
+                </h2>
+                <p>There must be 1,000 or more birds in your grant-funded house.</p>
+            </div>
         </div>
 
 </div>
