--- a/app/views/layinghens/current/scoring/results.html
+++ b/app/views/layinghens/current/scoring/results.html
@@ -227,7 +227,7 @@
                             Average
                         </td>
                         <td class="govuk-table__cell">
-                            Multi-tier systems that have 3 tiers or fewer
+                            Supports the use of multi-tier aviary systems
                         </td>
                         <td class="govuk-table__cell">
                             <a class="govuk-link govuk-link--no-visited-state" href="multi-tier-other?from-scoring=true">
