--- a/app/views/layinghens/current/eligibility/solar/solar-cost.html
+++ b/app/views/layinghens/current/eligibility/solar/solar-cost.html
@@ -1,10 +1,8 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    Estimated solar PV system cost and floorspace size
+    What is the estimated cost of buying and installing the solar PV system?
 {% endblock %}
-
-
 
 {% block content %}
 
@@ -12,60 +10,35 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form action="potential-funding">
+            <form action="potential-funding-solar">
 
-                <h1 class="govuk-heading-l">Estimated solar PV system cost and floorspace size</h1>
+                <h1 class="govuk-heading-l">
+                    What is the estimated cost of buying and installing the solar PV system?
+                </h1>
 
-                    <p class="govuk-hint">
-                            There is no minimum funding amount for buying and installing a solar PV system.
-                    </p>
+                <p class="govuk-hint">
+                    You can apply for up to 25% of the estimated costs of buying and installing a solar PV system which produces up to 5kW in energy output per 1,000 birds.
+                </p>
 
-                    <p class="govuk-hint"> 
-                            Funding for a solar PV system will be capped at the lowest of these 2 amounts, either:
-                    </p>
+                <p class="govuk-hint">
+                    The maximum combined housing and solar PV system grant funding you can apply for is £500,000.
+                </p>
 
-                    <ul class="govuk-hint govuk-list govuk-list--bullet">
-                        <li>
-                            the cost of 75m<sup>2</sup> of the bird floorspace or
-                        </li>
-                        <li>
-                            25% of the invoice price for purchase and installation of the solar PV system that you will need to submit at full application
-                        </li>
-                    </ul>
+                <p class='govuk-hint'>
+                    Enter estimated amount, for example 300,000
+                </p>
 
-                    <p class='govuk-hint'>
-                            Do not include VAT
-                    </p>
-
-                    <p class='govuk-hint'>
-                            Enter total estimated amounts, for example 95,000
-                    </p>
-
-                    {{ govukInput ({
+                {{ govukInput ({
                         id: 'solar-cost',
                         name: 'solar-cost',
                         value: data['solar-cost'] if data['solar-cost'] else '',
-                        classes: 'govuk-input--width-5',
+                        classes: 'govuk-input--width-10',
                         label: {
                             text: 'Solar PV system costs',
-                            classes: ' '
+                            classes: 'govuk-visually-hidden'
                         },
                         prefix: {
                             text: '£'
-                        }
-                    }) }}
-
-                    {{ govukInput ({
-                        id: 'floorspace',
-                        name: 'floorspace',
-                        value: data['floorspace'] if data['floorspace'] else '',
-                        classes: 'govuk-input--width-5',
-                        label: {
-                            text: 'Size of the bird floorspace footprint',
-                            classes: ' '
-                        },
-                        suffix: {
-                            html: 'm<sup>2</sup>'
                         }
                     }) }}
 
