--- a/app/views/layinghens/current/eligibility/veranda/veranda-only.html
+++ b/app/views/layinghens/current/eligibility/veranda/veranda-only.html
@@ -63,7 +63,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The veranda must be at least the same size as 30% the indoor bird housing area footprint.
+                    The veranda must be at least the same size as 30% of the indoor bird housing area footprint.
                 </p>
                 <p>
                     You must exclude the veranda's floor area from calculations of stocking density (even if providing 24 hour access).
