--- a/app/views/layinghens/current/eligibility/solar/potential-funding.html
+++ b/app/views/layinghens/current/eligibility/solar/potential-funding.html
@@ -34,6 +34,9 @@
                     iconFallbackText: "Warning"
                 }) }}
 
+                <input type="hidden" name="potential-funding" value="{{ grantAmount }}">
+                <input type="hidden" name="total-cost" value="{{ data['cost'] | float }}">
+
                 {{ govukButton ({
                     html: 'Continue'
                 }) }}
